# add-play-integrity-codelab

./: .gitmodules  README.md
cpp/final/: build.gradle  gradle.properties  gradlew  settings.gradle
cpp/final/app/: build.gradle
cpp/final/app/src/main/cpp/: CMakeLists.txt  client_manager.cpp  client_manager.hpp  demo_scene.cpp  demo_scene.hpp  jni_util.cpp  jni_util.hpp  native_app_glue_included.cpp  our_key_codes.hpp  scene_manager.cpp  server_urls.hpp  util.hpp
cpp/final/gradle/wrapper/: gradle-wrapper.properties
cpp/start/: gradlew.bat
cpp/start/app/: build.gradle
cpp/start/app/src/main/: AndroidManifest.xml
cpp/start/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  client_manager.cpp  client_manager.hpp  common.hpp  demo_scene.cpp  engine.hpp  game_activity_included.cpp  game_input_included.cpp  http_client.cpp  http_client.hpp  imgui_manager.cpp  imgui_manager.hpp  input_util.cpp  input_util.hpp  json_util.cpp  json_util.hpp  native_engine.cpp  native_engine.hpp  scene.cpp  scene.hpp  scene_manager.hpp  util.cpp
cpp/start/app/src/main/java/com/example/google/codelab/playintegritycpp/: PlayIntegrityCodelabActivity.java
cpp/start/app/src/main/res/values/: strings.xml  styles.xml
kotlin/final/: gradle.properties  gradlew.bat  settings.gradle
kotlin/final/app/: build.gradle
kotlin/final/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
kotlin/final/app/src/main/res/values/: colors.xml
kotlin/final/gradle/wrapper/: gradle-wrapper.properties
kotlin/start/: build.gradle  gradlew
kotlin/start/app/: build.gradle
kotlin/start/app/src/main/: AndroidManifest.xml
kotlin/start/app/src/main/java/com/example/google/codelab/playintegritykotlin/: MainActivity.kt
kotlin/start/app/src/main/res/drawable/: ic_launcher_background.xml
kotlin/start/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
kotlin/start/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
kotlin/start/app/src/main/res/values/: strings.xml  themes.xml
server/: README.md  build.gradle  gradlew  gradlew.bat  settings.gradle
server/src/main/appengine/: app.yaml
server/src/main/kotlin/com/google/play/integrity/codelab/server/: Application.kt
server/src/main/kotlin/com/google/play/integrity/codelab/server/models/: CommandResult.kt  ExpressToken.kt  IntegrityRandom.kt  IntegrityVerdict.kt  LookupResult.kt  ServerCommand.kt  ValidateResult.kt
server/src/main/kotlin/com/google/play/integrity/codelab/server/routes/: CommandRoutes.kt  (+1 more)
server/src/main/resources/: application.conf  logback.xml
unity/final/Assets/Scenes/: SampleScene.unity
unity/final/Assets/Scripts/: CommandResult.cs  PlayIntegrityController.cs  ServerCommand.cs
unity/final/ProjectSettings/: ProjectSettings.asset
unity/start/Assets/Scripts/: PlayIntegrityController.cs
(+24 files in other folders)
